--- a/index.html
+++ b/index.html
@@ -5,142 +5,127 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Coque personnalisée</title>
 
-    <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 
     <style>
-        body { background-color: #f8f9fa; }
-        .product-img {
-            width: 100%;
-            border-radius: 12px;
-            border: 1px solid #b9b5b5;
+        body { background:#fafafa; }
+        .main-img {
+            width:100%;border-radius:14px;border:1px solid #ccc;background:white;padding:12px;
         }
-        .preview-img {
-            width: 100%;
-            max-height: 350px;
-            object-fit: contain;
-            border: 1px solid #bbb;
-            border-radius: 12px;
-            margin-top: 10px;
-            display: none;
+        .thumbs img{
+            width:70px;height:100px;object-fit:cover;border-radius:8px;border:2px solid transparent;cursor:pointer;
         }
-        .header-bg {
-            background: black;
-            color: white;
-            padding: 8px;
-            text-align: center;
-            font-size: 14px;
-        }
-        h4{color: red;}
+        .thumbs img.active{ border-color:#000; }
+        .product-info h4{color:red;}
+        .preview-img{display:none;max-height:350px;object-fit:contain;border:1px solid #bbb;border-radius:12px;margin-top:10px;width:100%;}
     </style>
 </head>
-
 <body>
 
-<!-- Bande noire promo -->
-<div class="header-bg">
+<div class="header-bg bg-dark text-white text-center py-2">
     PROMO* économisez 100 dhs avec l'offre 2 coques 259 DHS et livraison gratuite !
 </div>
 
-<!-- NAVBAR -->
-<nav class="navbar navbar-expand-lg bg-white shadow-sm">
-    <div class="container">
-        <a class="navbar-brand fw-bold">OACASE.ma</a>
-    </div>
+<nav class="navbar bg-white shadow-sm">
+  <div class="container">
+    <a class="navbar-brand fw-bold">KASADCASE.ma</a>
+  </div>
 </nav>
 
-<!-- SECTION PRODUIT -->
-<div class="container mt-5">
-    <div class="row g-4">
+<div class="container my-5">
+  <div class="row g-4">
 
-        <!-- Image -->
-        <div class="col-md-6">
-            <img src="omarpic.png" class="product-img" alt="Coque personnalisée">
-            <img id="preview" class="preview-img" alt="Aperçu">
-        </div>
+    <!-- Galerie images mixée -->
+    <div class="col-lg-6 text-center">
+      <img id="mainImg" src="omarpic.png" class="main-img" alt="Aperçu coque">
 
-        <!-- Infos produit -->
-        <div class="col-md-6">
-            <h3>Coque de téléphone personnalisée avec photo</h3>
+      <div class="thumbs d-flex gap-2 justify-content-center mt-3">
+        <img src="omarpic.png" class="active" onclick="switchImg(this)">
+        <img src="image2.jpg" onclick="switchImg(this)">
+      </div>
 
-            <h4 class="mt-3">
-                
-              149 dh   <span class="text-decoration-line-through text-muted fs-5">199 DH</span>
-            </h4>
-
-            <p class="mt-4 fw-bold">Choisir une offre :</p>
-
-            <form id="orderForm">
-                <div class="form-check mb-2">
-                    <input class="form-check-input" type="radio" name="offer" value="1 Coque à 169dh + 30dh livraison = 199 dh">
-                    <label class="form-check-label">1 Coque à 149dh + 30dh livraison = 179 dh</label>
-                </div>
-
-                <div class="form-check mb-2">
-                    <input class="form-check-input" type="radio" name="offer" value="2 Coques 300dh - Livraison gratuite">
-                    <label class="form-check-label">2 Coques 259dh - Livraison gratuite</label>
-                </div>
-
-                <div class="form-check mb-4">
-                    <input class="form-check-input" type="radio" name="offer" value="3 Coques 400dh - Livraison gratuite + Cadeaux">
-                    <label class="form-check-label">3 Coques 349dh - Livraison gratuite + Cadeaux</label>
-                </div>
-
-                <p class="fw-bold">Télécharger votre photo</p>
-                <input type="file" id="photo" class="form-control mb-3" accept="image/*">
-
-                <p class="fw-bold">Informations client</p>
-                <input class="form-control mb-3" id="name" type="text" placeholder="Nom complet">
-                <input class="form-control mb-3" id="phone" type="text" placeholder="Numéro de téléphone">
-
-                <button type="button" onclick="sendWhatsApp()" class="btn btn-success w-100 py-2 fs-5">
-                    Commander via WhatsApp
-                </button>
-                <hr>
-                <h4 style="text-align:center;color: rgb(234, 66, 66);">notre equipe vous contactera par WhatsApp dans quelques instant pour la confirmation de la commande</h4>
-                <ul>
-                    <li type="square"><i>Description du produit : coque rigide avec votre image imprimée sur la face avant, bords transparents.</i></li><br>
-                    <li type="square"><i>Ajoutez du textes, vos photos, images et motifs en toute simplicité puis validez votre création.</i></li><br>
-                    <li type="square"><i>Petit conseil : vous personnalisez pour votre propre téléphone et c'est super ! pensez à cette idée cadeau qui pourra faire plaisir comme pour vos plus belles occasions : anniversaires, événements...</i></li><br>
-                </ul>
-            </form>
-        </div>
+      <img id="preview" class="preview-img" alt="Aperçu photo uploadée">
     </div>
+
+    <!-- Infos produit + WhatsApp form -->
+    <div class="col-lg-6 product-info">
+      <h3>Coque de téléphone personnalisée</h3>
+      <h4 class="mt-2">149 DH <span class="text-muted text-decoration-line-through">199 DH</span></h4>
+
+      <p class="mt-4 fw-bold">Choisir une offre :</p>
+      <form id="orderForm">
+
+        <div class="form-check mb-2">
+            <input class="form-check-input" type="radio" name="offer" value="1 Coque 149dh + 30dh livraison = 179 dh">
+            <label class="form-check-label">1 Coque 149dh + 30dh livraison = 179 dh</label>
+        </div>
+
+        <div class="form-check mb-2">
+            <input class="form-check-input" type="radio" name="offer" value="2 Coques 259dh - Livraison gratuite">
+            <label class="form-check-label">2 Coques 259dh - Livraison gratuite</label>
+        </div>
+
+        <div class="form-check mb-4">
+            <input class="form-check-input" type="radio" name="offer" value="3 Coques 349dh - Livraison gratuite + Cadeaux">
+            <label class="form-check-label">3 Coques 349dh - Livraison gratuite + Cadeaux</label>
+        </div>
+
+        <p class="fw-bold">Télécharger votre photo</p>
+        <input type="file" id="photo" class="form-control mb-3" accept="image/*">
+
+        <p class="fw-bold">Informations client</p>
+        <input class="form-control mb-3" id="client_name" type="text" placeholder="Nom complet">
+        <input class="form-control mb-3" id="client_phone" type="text" placeholder="Numéro de téléphone">
+        <input class="form-control mb-3" id="client_address" type="text" placeholder="Adresse complète">
+        <input class="form-control mb-3" id="client_model" type="text" placeholder="Modèle du téléphone">
+
+        <button type="button" onclick="sendWhatsApp()" class="btn btn-success w-100 py-2 fs-5">Commander via WhatsApp</button>
+
+        <hr>
+        <h5 class="text-center text-danger">Notre équipe vous contactera par WhatsApp dans quelques instants pour confirmer votre commande.</h5>
+        <ul>
+            <li type="square"><i>Description du produit : coque rigide avec votre image imprimée sur la face avant, bords transparents.</i></li><br>
+            <li type="square"><i>Ajoutez du textes, vos photos, images et motifs en toute simplicité puis validez votre création. </i></li><br>
+            <li type="square"><i>Petit conseil : vous personnalisez pour votre propre téléphone et c'est super ! pensez à cette idée cadeau qui pourra faire plaisir comme pour vos plus belles occasions : anniversaires, événements...</i></li><br>
+        </ul>
+      </form>
+    </div>
+  </div>
 </div>
 
 <script>
-    // Aperçu de l'image uploadée
-    document.getElementById("photo").addEventListener("change", function(event) {
-        const preview = document.getElementById("preview");
-        preview.src = URL.createObjectURL(event.target.files[0]);
-        preview.style.display = "block";
-    });
+function switchImg(el){
+  document.querySelectorAll('.thumbs img').forEach(t=>t.classList.remove('active'));
+  el.classList.add('active');
+  document.getElementById('mainImg').src = el.src;
+}
 
-    // Envoie vers WhatsApp
-    function sendWhatsApp() {
-        let name = document.getElementById("name").value;
-        let phone = document.getElementById("phone").value;
-        let offer = document.querySelector('input[name="offer"]:checked');
+// Preview photo
+ document.getElementById("photo").addEventListener("change", function(e){
+   const prev = document.getElementById("preview");
+   prev.src = URL.createObjectURL(e.target.files[0]);
+   prev.style.display = "block";
+});
 
-        if (!name || !phone || !offer) {
-            alert("Veuillez remplir toutes les informations.");
-            return;
-        }
+// WhatsApp
+function sendWhatsApp(){
+  let name = document.getElementById("client_name").value;
+  let phone = document.getElementById("client_phone").value;
+  let offer = document.querySelector('input[name="offer"]:checked');
 
-        let message =
-            "Nouvelle commande :%0A" +
-            "Nom : " + name + "%0A" +
-            "Téléphone : " + phone + "%0A" +
-            "Offre : " + offer.value + "%0A" +
-            "Photo : ajoutée ✓";
+  if(!name || !phone || !offer){ alert("Veuillez remplir toutes les informations."); return; }
 
-        // NUMÉRO WHATSAPP À REMPLACER ICI
-        let phoneNumber = "212600000000";
+  let message =
+  "Nouvelle commande :%0A"+
+  "Nom : "+name+"%0A"+
+  "Téléphone : "+phone+"%0A"+
+  "Offre : "+offer.value+"%0A"+
+  "Photo : ajoutée ✓";
 
-        window.open("https://wa.me/" + phoneNumber + "?text=" + message, "_blank");
-    }
+  let num = "212600000000";
+  window.open("https://wa.me/"+num+"?text="+message, "_blank");
+}
 </script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
