--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <nav class="navbar bg-white shadow-sm">
   <div class="container">
-    <a class="navbar-brand fw-bold">KASADCASE.ma</a>
+    <a class="navbar-brand fw-bold">OACASE.ma</a>
   </div>
 </nav>
 
@@ -129,3 +129,4 @@ function sendWhatsApp(){
 
 </body>
 </html>
+
