Fix image sources and update HTML structure

--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
 
     <!-- Galerie images mixée -->
     <div class="col-lg-6 text-center">
-      <img id="mainImg" src="omarpic.png" class="main-img" alt="Aperçu coque">
+      <img id="mainImg" src="IMAGE PER.jpg" class="main-img" alt="Aperçu coque">
 
       <div class="thumbs d-flex gap-2 justify-content-center mt-3">
-        <img src="omarpic.png" class="active" onclick="switchImg(this)">
+        <img src="IMAGE PER.jpg" class="active" onclick="switchImg(this)">
         <img src="image2.jpg" onclick="switchImg(this)">
+           <img src="IMAGE PER 2.jpg" class="active" onclick="switchImg(this)">
       </div>
 
       <img id="preview" class="preview-img" alt="Aperçu photo uploadée">
@@ -129,5 +130,6 @@ function sendWhatsApp(){
 
 </body>
 </html>
+
 
 
