--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>OADCASE.ma — Coques Luxe</title>
+  <title>OACASE.ma — Coques Luxe</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -312,7 +312,7 @@
         alert('Paiement simulé réussi — Merci ' + name + '!');
         // open whatsapp (replace number)
         const msg = `Nouvelle commande:%0ANom:%20${encodeURIComponent(name)}%0AOffre:%20${encodeURIComponent(document.getElementById('offerSelect').options[document.getElementById('offerSelect').selectedIndex].text)}%0APrix:%20${price}%20DHS`;
-        window.open('https://wa.me/212600000000?text=' + msg, '_blank');
+        window.open('https://wa.me/212656217331?text=' + msg, '_blank');
       },1100);
     });
 
@@ -325,7 +325,7 @@
       const offerText = document.getElementById('offerSelect').options[document.getElementById('offerSelect').selectedIndex].text;
       if(!name || !phone || !model){ alert('Veuillez renseigner au moins nom, téléphone et modèle.'); return; }
       const msg = `Nouvelle commande:%0AName:%20${encodeURIComponent(name)}%0APhone:%20${encodeURIComponent(phone)}%0AAdresse:%20${encodeURIComponent(address)}%0AModèle:%20${encodeURIComponent(model)}%0AOffre:%20${encodeURIComponent(offerText)}`;
-      window.open('https://wa.me/212600000000?text=' + msg, '_blank');
+      window.open('https://wa.me/212656217331?text=' + msg, '_blank');
     });
 
     // small decorative light effect for hero
@@ -473,3 +473,4 @@ function payerStripe() {
 
 </body>
 </html>
+
